# seda-common-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: tests.yml
crates/common/: Cargo.toml
crates/common/src/: crypto.rs
crates/common/src/msgs/: mod.rs
crates/common/src/msgs/data_requests/: dr_id.test_vector.json  execute_tests.rs  mod.rs  query.rs  query_tests.rs  sudo_tests.rs  types.rs  types_tests.rs
crates/common/src/msgs/data_requests/execute/: commit_result.rs  mod.rs  post_request.rs  reveal_result.rs
crates/common/src/msgs/data_requests/sudo/: expire_data_requests.rs  mod.rs  post_results.rs  remove_requests.rs
crates/common/src/msgs/owner/: execute_tests.rs  mod.rs  query.rs  query_tests.rs
crates/common/src/msgs/owner/execute/: accept_ownership.rs  add_to_allowlist.rs  mod.rs  pause.rs  remove_from_allowlist.rs  transfer_ownership.rs  unpause.rs
crates/common/src/msgs/staking/: execute_tests.rs  mod.rs  proof_tests.rs  query_tests.rs  types.rs
crates/common/src/msgs/staking/execute/: mod.rs  stake.rs  unstake.rs  withdraw.rs
crates/common/src/msgs/staking/query/: is_executor_eligible.rs  mod.rs
crates/common/src/types/: hash_self.rs  mod.rs  to_hex.rs  verify_self.rs
crates/proto-common/: Cargo.toml  buf.gen.rust.yaml  generate.sh
crates/proto-common/proto/: buf.yaml
crates/proto-common/src/: lib.rs
src/: crypto.rs  error.rs  lib.rs  types.rs
src/msgs/: assert_json.rs  mod.rs
src/msgs/data_requests/: execute_tests.rs  mod.rs  query.rs  query_tests.rs  sudo_tests.rs  types.rs  types_tests.rs
src/msgs/data_requests/execute/: commit_result.rs  mod.rs  post_request.rs  reveal_result.rs
src/msgs/data_requests/sudo/: mod.rs  post_result.rs  post_results.rs  remove_requests.rs
src/msgs/owner/: execute_tests.rs  mod.rs  query.rs  query_tests.rs
src/msgs/owner/execute/: accept_ownership.rs  add_to_allowlist.rs  mod.rs  remove_from_allowlist.rs  transfer_ownership.rs
src/msgs/staking/: execute_tests.rs  mod.rs  query.rs  query_tests.rs  types.rs  types_tests.rs
src/msgs/staking/execute/: mod.rs  stake.rs  unstake.rs  withdraw.rs
src/msgs/staking/query/: is_executor_eligible.rs  mod.rs
src/types/: hash_self.rs  mod.rs  sign_self.rs  uint128.rs  verify_self.rs
