[package]
name = "seda-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde", "base64"]
cosmwasm = ["cosmwasm-schema", "cosmwasm-std", "cw-storage-plus"]
test-utils = []

[dependencies]
base64 = { workspace = true, optional = true }
cosmwasm-schema = { workspace = true, optional = true }
cosmwasm-std = { workspace = true, optional = true }
cw-storage-plus = { workspace = true, optional = true }
hex.workspace = true
lazy_static.workspace = true
sha3.workspace = true
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, optional = true }
thiserror.workspace = true
vrf-rs.workspace = true

[dev-dependencies]
schemars = { workspace = true, features = ["semver"] }
serde_json.workspace = true
k256.workspace = true
