[package]
name = "seda-proto-common"
version = "0.4.0-dev.0"
edition = "2021"

[dependencies]
prost = { workspace = true, default-features = false }
prost-types = { workspace = true, default-features = false, optional = true }
cosmos-sdk-proto = { version = "0.25", default-features = false, optional = true }

[features]
default = []
all = ["data_proxy", "randomness", "staking", "vesting", "wasm_storage"]
cosmos = ["dep:cosmos-sdk-proto"]
cosmwasm = ["cosmos", "cosmos-sdk-proto/cosmwasm"]
data_proxy = []
randomness = ["dep:prost-types"]
staking = ["dep:prost-types"]
vesting = []
wasm_storage = ["dep:prost-types"]
